@@ -2,41 +2,52 @@ package ru.hogwarts.school.service;
 
 import org.springframework.stereotype.Service;
 import ru.hogwarts.school.model.Faculty;
+import ru.hogwarts.school.repositories.FacultyRepository;
 
 import java.util.Collection;
-import java.util.HashMap;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class FacultyService {
+    private final FacultyRepository facultyRepository;
 
-    private final HashMap<Long, Faculty> faculties = new HashMap<>();
-    private long id = 0;
+    public FacultyService(FacultyRepository facultyRepository) {
+        this.facultyRepository = facultyRepository;
+    }
+
 
     public Faculty createFaculty(Faculty faculty) {
-        faculty.setId(++id);
-        faculties.put(faculty.getId(), faculty);
-        return faculty;
-    }
-
-    public Faculty findFaculty(long id) {
-        return faculties.get(id);
-    }
-
-    public Faculty editFaculty(Faculty faculty) {
-        if (faculties.containsKey(faculty.getId())) {
-            faculties.put(faculty.getId(), faculty);
-            return faculty;
+        try {
+            return facultyRepository.save(faculty);
+        } catch (RuntimeException e) {
+            System.out.println(e.getMessage());
         }
         return null;
     }
 
-    public Faculty deleteFaculty(long id) {
-        return faculties.remove(id);
+    public Faculty findFacultyById(long id) {
+        return facultyRepository.findById(id).get();
+    }
+
+    public Faculty editFaculty(Faculty faculty) {
+        return facultyRepository.save(faculty);
+    }
+
+    public void deleteFaculty(long id) {
+        facultyRepository.deleteById(id);
     }
 
     public Collection<Faculty> findFacultyByColor(String color) {
-        return faculties.values().stream()
-                .filter(faculty -> faculty.getColor().equals(color))
-                .toList();
+        String normalColor = color.trim().toLowerCase();
+
+        return facultyRepository.findAll().stream()
+                .filter(faculty -> faculty.getColor() != null)
+                .filter(faculty -> faculty.getColor().toLowerCase().equals(normalColor))
+                .collect(Collectors.toList());
+    }
+
+    public List<Faculty> getAllFaculty() {
+        return facultyRepository.findAll();
     }
 }
